Fix wishlist alignment

--- a/assets/scss/pages/_wishlists.scss
+++ b/assets/scss/pages/_wishlists.scss
@@ -1,3 +1,13 @@
 .account-wishlists {
   margin-bottom: 30px;
 }
+
+.account-wishlist {
+  margin-right: -($account-gutter / 2);
+  margin-left: -($account-gutter / 2);
+
+  .section-title {
+    margin-right: $account-gutter / 2;
+    margin-left: $account-gutter / 2;
+  }
+}
